--- a/artist.html
+++ b/artist.html
@@ -20,7 +20,7 @@
 <nav id="navigation-bar">
     <!-- Logo -->
     <div id="logo">
-        <a href="home.html">
+        <a href="index.html">
             <img src="images/Logo.jpg" alt="">
         </a>
     </div>
@@ -28,7 +28,7 @@
     <!-- Search bar -->
     <div id="search">
         <div id="search-logo">
-            <a href="home.html">
+            <a href="index.html">
                 <i class="fas fa-search"></i>
             </a>
         </div>
@@ -44,7 +44,7 @@
         <!-- Top nav bar -->
         <ul class="horizontal-list  ">
             <li>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
 
             <li>
