--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Search bar -->
         <div id="search">
             <div id="search-logo">
-                <a href="home.html">
+                <a href="index.html">
                     <i class="fas fa-search"></i>
                 </a>
             </div>
@@ -41,7 +41,7 @@
             <!-- Top nav bar -->
             <ul class="horizontal-list  ">
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
 
                 <li>
